Overflow fix på post

--- a/resources/sass/components/_post.scss
+++ b/resources/sass/components/_post.scss
@@ -186,6 +186,7 @@
 
 	.post-body {
 		background: $gray;
+        overflow: hidden;
 		color: white;
 		padding: 1rem;
 
@@ -210,6 +211,7 @@
 		}
 
 		* {
+            overflow: hidden;
 			color: white;
 		}
 	}
